--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "postcss-loader": "^1.3.3",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
+    "react-facebook-login": "^3.6.1",
     "react-hot-loader": "^3.0.0-beta.6",
     "react-redux": "^5.0.3",
     "react-router": "^3.0.2",
